tests/sksl/errors/StructNameWithoutIdentifier.glsl
### Compilation failed:

error: 2: expected an identifier, but found ';'
1 error
